Fix images on mobile and subsection colours

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,3 @@ main {
 .social-icon:hover {
 	filter: brightness(0.8);
 }
-
-p {
-	color: white;
-}
